--- a/portfolio.css
+++ b/portfolio.css
@@ -4,13 +4,13 @@ padding: 0px;
 }
 
 body{
-background-image: linear-gradient(to top, #393d3f, #65686b, #95979a, #c8c9cb, #fdfdff);    
+background-image: linear-gradient(to top, #fffffc, #e8e7de, #d2d0c1, #beb8a4, #aaa188);
 height: 100vh;
 width: 100vw;
 }
 
 .container{
-background-image: linear-gradient(to top, #393d3f, #65686b, #95979a, #c8c9cb, #fdfdff);
+background-image: linear-gradient(to top, #fffffc, #e8e7de, #d2d0c1, #beb8a4, #aaa188);
 width: 100vw;
 height:100vh;
 display: flex;
@@ -23,7 +23,7 @@ display: flex;
 display: flex;
 width: 100vw;
 height:30vh ;
-background-color: black;
+background-color: #000000;
 align-self: center;
 justify-content: center;
 } 
