--- a/portfolio.css
+++ b/portfolio.css
@@ -4,13 +4,13 @@ padding: 0px;
 }
 
 body{
-background-image: linear-gradient(to top, #fffffc, #e8e7de, #d2d0c1, #beb8a4, #aaa188);
+background-image: linear-gradient(to bottom, #d9d8d3, #cdcac0, #c1bcad, #b5af9a, #aaa188);
 height: 100vh;
 width: 100vw;
 }
 
 .container{
-background-image: linear-gradient(to top, #fffffc, #e8e7de, #d2d0c1, #beb8a4, #aaa188);
+background-image: linear-gradient(to bottom, #d9d8d3, #cdcac0, #c1bcad, #b5af9a, #aaa188);
 width: 100vw;
 height:100vh;
 display: flex;
@@ -26,6 +26,7 @@ height:30vh ;
 background-color: #000000;
 align-self: center;
 justify-content: center;
+
 } 
 
 .div-2{
@@ -33,6 +34,7 @@ width: fit-content;
 height: fit-content;
 display: flex;
 align-self: center;
+border-radius: 50%;
 }
 
 .img{
