--- a/portfolio.css
+++ b/portfolio.css
@@ -4,17 +4,17 @@ padding: 0px;
 }
 
 body{
-background-image: linear-gradient(to bottom, #d9d8d3, #cdcac0, #c1bcad, #b5af9a, #aaa188);
+background-color: white;
 height: 100vh;
 width: 100vw;
 }
 
 .container{
-background-image: linear-gradient(to bottom, #d9d8d3, #cdcac0, #c1bcad, #b5af9a, #aaa188);
+background-color: white;
 width: 100vw;
 height:100vh;
 display: flex;
-
+background-image: radial-gradient(circle, #1f2233, #202336, #222538, #23263b, #25273e);
 }
 
  
@@ -23,7 +23,6 @@ display: flex;
 display: flex;
 width: 100vw;
 height:30vh ;
-background-color: #000000;
 align-self: center;
 justify-content: center;
 
@@ -41,7 +40,7 @@ border-radius: 50%;
     width:250px;
     height:250px;
     border-radius: 50%;
-    border:5px solid white
+    border:5px solid #F9605A;
 }
 
 
