--- a/portfolio-2.css
+++ b/portfolio-2.css
@@ -138,7 +138,7 @@ display: flex;
 flex-direction: column;
 width: 100%;
 height:100vh;
-background-image: url(/imgs/background-wallpaper-edited.jpg);
+background-image: url(./imgs/background-wallpaper-edited.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 justify-content: center;
