--- a/portfolio-2.css
+++ b/portfolio-2.css
@@ -22,103 +22,103 @@ width: 100%;
 height: 400vh;
 display: grid;
 grid-template-columns:100% ;
-grid-template-rows:10vh 90vh 290vh 10vh ;
+grid-template-rows: 100vh 290vh 10vh ;
 grid-template-areas:
-"hd"
 "hd"
 "mn"
 "ft"
 ;
+}
 
 /* --------------------------nav-------------------------- */
 
-}
+nav{
+    grid-area: nav;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
 
-#nav{
-grid-area: nav;
-display: flex;
-align-items: center;
-justify-content: space-between;
-position: fixed;
-width: 100%;
-
-}
-
-.nav-a{
-color: white;
-text-decoration: none;
-
-}
-
-.nav-img-1{
-width: 30px;
-height: 30px;
-border: 3px solid #F9605A;
-border-radius: 50%;
-}
-
-.bold{
-color: #F9605A;
-}
-
-.nav-sp-1{
-padding-left: 10px;
-
-}
-
-.nav-div-1{
-width: fit-content;
-height: fit-content;
-display: flex;
-color:white;
-font-size: 30px;
-margin-left: 50px;
-justify-content: center;
-align-items: center;
-}
-
-.nav-div-content-container{
-display: flex;
-color: white;
-margin-right: 50px;
-}
-
-.nav-p-2{
-margin-right: 50px;
-}
-
-.nav-a-1{
-color: white;
-text-decoration: none;
-font-size: 15px;
-}
-
-.nav-a-1:hover{
-color: #F9605A;
-}
-
-.nav-p-3{
-width: fit-content;
-height: fit-content;
-border-radius: 5px;
-padding-left: 2px;
-padding-right: 2px;
-border: 2px solid #F9605A;
-}
-
-.nav-a-2{
-color: white;
-text-decoration: none;
-font-size: 15px;
-}
-
-.nav-a-2:hover{
-text-decoration: none;
-font-size: 15px;
-
-}
-
-.nav-p-3:hover{
+    
+    }
+    
+    .nav-a{
+    color: white;
+    text-decoration: none;
+    
+    }
+    
+    .nav-img-1{
+    width: 30px;
+    height: 30px;
+    border: 3px solid #F9605A;
+    border-radius: 50%;
+    }
+    
+    .bold{
+    color: #F9605A;
+    }
+    
+    .nav-sp-1{
+    padding-left: 10px;
+    
+    }
+    
+    .nav-div-1{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    color:white;
+    font-size: 30px;
+    margin-left: 40px;
+    justify-content: center;
+    align-items: center;
+    }
+    
+    .nav-div-content-container{
+    display: flex;
+    color: white;
+    margin-right: 50px;
+    z-index: 10;
+    }
+    
+    .nav-p-2{
+    margin-right: 40px;
+    }
+    
+    .nav-a-1{
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    }
+    
+    .nav-a-1:hover{
+    color: #F9605A;
+    }
+    
+    .nav-p-3{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 5px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border: 2px solid #F9605A;
+    }
+    
+    .nav-a-2{
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    }
+    
+    .nav-a-2:hover{
+    text-decoration: none;
+    font-size: 15px;
+    
+    }
+    
+    .nav-p-3:hover{
     width: fit-content;
     height: fit-content;
     border-radius: 5px;
@@ -126,6 +126,17 @@ font-size: 15px;
     padding-right: 2px;
     border: 2px solid #F9605A;
     background-color: #F9605A;
+
+}
+
+#ham-menu{
+display: none;
+}
+
+.ham-menu-icon{
+font-size: 20px;
+color: white;
+display: none;
 }
 
 /* --------------------------header-------------------------- */
@@ -163,7 +174,7 @@ border-radius: 50%;
 border:5px solid #F9605A;
 position: relative;
 top: -100px;
-
+z-index: 9;
 }
 
 .hd-p-1{
@@ -173,7 +184,7 @@ width: fit-content;
 height: fit-content;
 position: relative;
 top:-60px;
-
+z-index: 9;
 }
 
 .hd-sp-1{
@@ -183,6 +194,7 @@ font-size: 40px;
 position: relative;
 top:-70px;
 align-self: center;
+z-index: 9;
 }
 
 .hd-sp-2{
@@ -209,98 +221,98 @@ flex-direction: column;
 }
 
 .mn-div-about{
-display: flex;
-width: 100%;
-height: fit-content;
-background-color: #1F2233;
-padding-top: 15vh;
-padding-bottom: 15vh;
-}
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    background-color: #1F2233;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+    }
+    
+    .mn-div-1{
+    display: flex;
+    margin-left: 20vw;
+    margin-right: 3vw;
+    background-color: #1F2233;
+    border-radius: 15px;
+    }
+    .mn-img-1{
+    width: 20vw;
+    height: 47vh;
+    border-radius: 15px;
+    border:2px solid #F9605A;
+    
+    }
+    
+    .mn-p-1{
+    display: flex;
+    margin-right: 20vw;
+    flex-direction: column;
+    background-color: #1F2233;
+    
+    }
+    
+    
+    .mn-sp-1{
+    display: flex;
+    color: #F9605A;
+    align-items: center;
+    font-size: 20px;
+    }
+    
+    .mn-sp-2{
+    display: flex;
+    color: white;
+    font-size: 25px;
+    border-bottom: 2px solid #F9605A;
+    width: fit-content;
+    }
+    
+    .mn-sp-3{
+    display: flex;
+    color: white;
+    font-size: 15px;
+    
+    }
+    
+    .mn-sp-4{
+    display: flex;
+    border-left: 5px solid #F9605A;
+    height:15vh;
+    margin-top: 10px;
+    padding-left: 5px;
+    }
+    
+    .mn-sp-5{
+    display: flex;
+    color: white;
+    height: 15vh;
+    width:calc(100%/2);
+    justify-content: space-between;
+    flex-direction: column;
+    }
+    
+    .mn-sp-6{
+    display: flex;
+    margin: 5px;
+    }
+    
+    .mn-sp-7{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 5px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border: 2px solid #F9605A;
+    margin-top: 10px;
+    }
 
-.mn-div-1{
-display: flex;
-margin-left: 20vw;
-margin-right: 3vw;
-background-color: #1F2233;
-border-radius: 15px;
-}
-.mn-img-1{
-width: 20vw;
-height: 47vh;
-border-radius: 15px;
-border:2px solid #F9605A;
-opacity: 0.9;
-}
-
-.mn-p-1{
-display: flex;
-margin-right: 20vw;
-flex-direction: column;
-background-color: #1F2233;
-
-}
-
-
-.mn-sp-1{
-display: flex;
-color: #F9605A;
-align-items: center;
-font-size: 20px;
-}
-
-.mn-sp-2{
-display: flex;
-color: white;
-font-size: 25px;
-border-bottom: 2px solid #F9605A;
-width: fit-content;
-}
-
-.mn-sp-3{
-display: flex;
-color: white;
-font-size: 15px;
-
-}
-
-.mn-sp-4{
-display: flex;
-border-left: 10px solid #F9605A;
-height:15vh;
-margin-top: 10px;
-padding-left: 5px;
-}
-
-.mn-sp-5{
-display: flex;
-color: white;
-height: 15vh;
-width:calc(100%/2);
-justify-content: space-between;
-flex-direction: column;
-}
-
-.mn-sp-6{
-display: flex;
-margin: 5px;
-}
-
-.mn-sp-7{
-width: fit-content;
-height: fit-content;
-border-radius: 5px;
-padding-left: 2px;
-padding-right: 2px;
-border: 2px solid #F9605A;
-margin-top: 10px;
-}
-
-.mn-a-1{
-color: white;
-text-decoration: none;
-font-size: 15px;
-
-}
+    .mn-a-1{
+        color: white;
+        text-decoration: none;
+        font-size: 15px;
+        
+        }
 
 .mn-a-1:hover{
 text-decoration: none;
@@ -389,7 +401,7 @@ padding-bottom: 20vh;
 background-color:#25273E;
 }
 
-.mn-p-4{
+.mn-div-10{
 display: flex;
 margin-left: 8%;
 width: fit-content;
@@ -457,7 +469,7 @@ border-radius: 20px;
 
 .mn-div-9{
     display: flex;
-    width: 0.5%;
+    width: 10%;
     height: 5px;
     background-color: #F9605A;
     border-radius: 20px;
@@ -470,7 +482,7 @@ margin-right: 15px;
 }
 
 .span-2{
-margin-right: 25px;
+margin-right: 30px;
 
 }
 
@@ -584,7 +596,6 @@ width:100%;
 
 .ft-div-container{
 display:flex;
-flex-direction: column;
 width: 100%;
 height: fit-content;
 
@@ -596,12 +607,6 @@ display: flex;
 align-items: center;
 padding-left: 5vw;
 
-}
-
-.ft-sp-1{
-display:flex;
-color: white;
-margin-right: 10px;
 }
 
 .ft-a-1{
@@ -620,6 +625,287 @@ color: white;
 .ft-sp-1{
 display: flex;
 color: white;
-margin-left: 30%;
+margin-right: 20%;
+
+}
+.betngan{
+display: flex;
+width: 100%;
+justify-content: center;
+
+}
+
+/* _________________small & medium screens_________________ */
+
+@media only screen and (min-width:360px) and (max-width:900px){
+
+    body{
+        background-image: radial-gradient(circle, #1f2233, #202336, #222538, #23263b, #25273e);
+        width: 100%;
+        height: auto;
+        display: flex;
+        font-family: 'Kanit', sans-serif;
+        }
+        .container{
+        background-image: radial-gradient(circle, #1f2233, #202336, #222538, #23263b, #25273e);
+        width: 100%;
+        height: 560vh;
+        display: grid;
+        grid-template-columns:100% ;
+        grid-template-rows: 100vh 450vh 10vh ;
+        grid-template-areas:
+        "hd"
+        "mn"
+        "ft"
+        ;
+        }
+
+    .nav-div-content-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    background-color: #1F2233;
+    margin-right: 0px;
+    position: fixed;
+    top: 0px;
+    height:70%;
+    width:85%;
+    left:-100%;
+    transition: 0.5s all ease;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    z-index: 10;
+    }
+    
+    #ham-menu:checked~.nav-div-content-container{
+    left: 0%;
+    z-index: 10;
+    
+    }
+    
+    .nav-p-3{
+        display: flex;
+        align-self: center;
+        width: fit-content;
+        height: fit-content;
+        margin-left: -10%;
+        border-radius: 5px;
+        padding-left: 2px;
+        padding-right: 2px;
+        border: 2px solid #F9605A;}
+    
+    .ham-menu-icon{
+    display: block;
+    font-size: 17px;
+    color: white;
+    margin-right: 20px;
+    }
+    
+    .nav-div-1{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    color:white;
+    font-size: 20px;
+    margin: 5px;
+    justify-content: center;
+    align-items: center;
+    }
+    
+    .nav-img-1{
+    width: 17px;
+    height: 17px;
+    border: 3px solid #F9605A;
+    border-radius: 50%;
+    }
+    
+    .nav-sp-1{
+        padding-left: 3px;
+        
+        }
+
+        .mn-div-about{
+            display: flex;
+            flex-direction: column-reverse;
+            width: 100%;
+            height: fit-content;
+            background-color: #1F2233;
+            padding-top: 15vh;
+            padding-bottom: 15vh;
+            }
+
+        .mn-div-1{
+            display: flex;
+            align-self: center;
+            margin-left: 0%;
+            margin-right: 0%;
+            background-color: #1F2233;
+            border-radius: 15px;
+            }
+
+        .mn-img-1{
+        width: 100%;
+        height: 45vh;
+        border-radius: 15px;
+        border:2px solid #F9605A;
+                
+        }
+
+        .mn-p-1{
+            display: flex;
+            margin-right: 0%;
+            flex-direction: column;
+            background-color: #1F2233;
+            
+            }
+
+        .mn-sp-7{
+            width: fit-content;
+            height: fit-content;
+            border-radius: 5px;
+            padding-left: 2px;
+            padding-right: 2px;
+            border: 2px solid #F9605A;
+            margin-top: 5%;
+            margin-bottom: 5%;
+            margin-left: 0%;
+        
+            }
+
+            .mn-div-parent{
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: fit-content;
+                background-color:#1F2233;
+                justify-content: center;
+                }
+            
+            .mn-div-2{
+                display: flex;
+                flex-direction: column;
+                width:95%;
+                height: fit-content;
+                border: 2px solid #F9605A;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                transition: 0.5s;
+                border-radius: 15px;
+                }
+    
+            .mn-sp-11{
+                display: flex;
+                font-size: 15px;
+                color: white;
+                margin: 10px;
+                margin-right: 0px;
+                }
+    
+            .mn-div-2:hover{
+            display: flex;
+            flex-direction: column;
+            width:95%;
+            height: fit-content;
+            border: 2px solid #F9605A;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            transition: 0.5s;
+            border-radius: 15px;
+    }
+
+    .mn-p-2{
+        display: flex;
+        flex-direction: column;
+        margin-left: 0%;
+        
+        }
+
+        .mn-div-10{
+            display: flex;
+            margin-left: 0%;
+            width: fit-content;
+            height: fit-content;
+            margin-bottom: 20px;
+            margin-top: 20px;
+            }
+
+            .mn-p-3{
+                display: flex;
+                flex-direction: column;
+                margin-left: 0%;
+                }
+    
+            .mn-div-3-parent{
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: fit-content;
+                background-color: #25273E;
+                justify-content: center;
+                    
+                    }
+    
+            .mn-div-3{
+                display: flex;
+                width: 95%;
+                height: 20vh;
+                margin: 5px;
+                border: 2px solid #F9605A;
+                border-radius: 15px;
+                transition: 0.5s;
+                        
+                }
+                        
+                .mn-div-3:hover{
+                    display: flex;
+                    width: 95%;
+                    height: 20vh;
+                    margin: 5px;
+                    border: 2px solid #F9605A;
+                    border-radius: 15px;
+                    transition: 0.5s;
+                        
+                }
+
+                #ft{
+                    grid-area: ft;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    outline: 2px solid white;
+                    background-color: #1F2233;
+                    width:100%;
+                    
+                    }
+                   
+                    .ft-sp-1{
+                        display: flex;
+                        color: white;
+                        margin-left: 0%;
+                        margin-right: 0%;
+                        
+                        }
+                        .betngan{
+                        display: flex;
+                        width: 100%;
+                        padding: 0px;
+                        align-items: center;
+                        justify-content: center;
+                        margin-top: 10px;
+                        
+                        }
+                        .ft-div-container{
+                            display:flex;
+                            flex-direction: column;
+                            width: 100%;
+                            height: fit-content;
+                            justify-content: center;
+                            align-items: center;
+                            
+                            
+                            }
+
 
 }
